--- a/PetTracking/app/src/main/res/layout/activity_sign_up.xml
+++ b/PetTracking/app/src/main/res/layout/activity_sign_up.xml
@@ -23,11 +23,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:background="@drawable/ic_baseline_pets_24"
                 android:layout_gravity="center"
-                android:layout_marginTop="80dp">
+                android:layout_marginTop="50dp">
 
             </ImageView>
 
@@ -58,7 +58,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="0.7"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/ic_baseline_pets_24">
+                        android:background="@drawable/ic_baseline_contact_mail_24">
 
                     </ImageView>
 
@@ -73,11 +73,12 @@
 
                         <!--this is the actual edit text which takes the input-->
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/mesajEditText"
+                            android:id="@+id/mailEditText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:layout_marginRight="15dp"
+                            android:inputType="textEmailAddress"
                             android:minHeight="60dp"
                             android:backgroundTint="@android:color/transparent" />
 
@@ -116,7 +117,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="0.7"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/ic_baseline_pets_24">
+                        android:background="@drawable/ic_baseline_account_circle_24">
 
                     </ImageView>
 
@@ -174,7 +175,7 @@
                         android:layout_gravity="center"
                         android:layout_weight="0.7"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/ic_baseline_pets_24">
+                        android:background="@drawable/ic_baseline_lock_24">
 
                     </ImageView>
 
@@ -194,6 +195,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
                             android:layout_marginRight="15dp"
+                            android:inputType="numberPassword"
                             android:minHeight="60dp"
                             android:backgroundTint="@android:color/transparent" />
 
@@ -206,6 +208,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
+                android:id="@+id/signInGecis"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="right"
