--- a/PetTracking/app/src/main/res/layout/activity_sign_in.xml
+++ b/PetTracking/app/src/main/res/layout/activity_sign_in.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:background="#ccff90"
     android:layout_height="match_parent"
-    tools:context=".Activity.SignUpActivity">
+    tools:context=".Activity.SignInActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -37,68 +36,10 @@
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center"
                 android:textColor="#91EC52"
-                android:text="Create your account">
+                android:text="Sign in to PetTracking">
 
             </TextView>
 
-            <androidx.cardview.widget.CardView
-
-                android:layout_width="300dp"
-                app:cardElevation="20dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="3dp"
-                android:layout_marginLeft="3dp"
-               android:layout_marginTop="20dp"
-                android:id="@+id/cardview_chat_email"
-                app:cardBackgroundColor="#9cff57"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="25dp"
-                android:layout_alignParentBottom="true"
-                >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:orientation="horizontal"
-                    >
-
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center"
-                        android:layout_weight="0.7"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/ic_baseline_contact_mail_24">
-
-                    </ImageView>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7"
-                        android:hint="Email"
-                        app:suffixTextColor="#37853A"
-                        app:hintTextColor="#9cff57"
-                        >
-
-                        <!--this is the actual edit text which takes the input-->
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/mailEditText"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginRight="15dp"
-                            android:inputType="textEmailAddress"
-                            android:minHeight="60dp"
-                            android:backgroundTint="@android:color/transparent" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
 
 
             <androidx.cardview.widget.CardView
@@ -142,7 +83,7 @@
 
                         <!--this is the actual edit text which takes the input-->
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/usernameEditText"
+                            android:id="@+id/usernameSigInEditText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
@@ -200,7 +141,7 @@
 
                         <!--this is the actual edit text which takes the input-->
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/paswordEditText"
+                            android:id="@+id/paswordSignInEditText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
@@ -218,12 +159,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
-                android:id="@+id/signInGecis"
+                android:id="@+id/signUpGecis"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="right"
                 android:textColor="#91EC52"
-                android:text="I already have an account">
+                android:text="Create an account">
 
             </TextView>
 
@@ -245,8 +186,8 @@
                 <Button
                     android:layout_width="150dp"
                     android:layout_height="55dp"
-                    android:text="SIGN UP"
-                    android:id="@+id/signUpButon"
+                    android:text="SIGN IN"
+                    android:id="@+id/signInButon"
                     android:textSize="18dp"
                     app:rippleColor="@android:color/transparent"></Button>
 
@@ -257,4 +198,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
