--- a/PetTracking/app/src/main/res/drawable-v24/ic_baseline_pets_25.xml
+++ b/PetTracking/app/src/main/res/drawable-v24/ic_baseline_pets_25.xml
@@ -1,5 +1,5 @@
 <vector android:alpha="0.79" android:height="24dp"
-    android:tint="#64dd17" android:viewportHeight="24"
+    android:tint="#9C27B0" android:viewportHeight="24"
     android:viewportWidth="24" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M4.5,9.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"/>
     <path android:fillColor="@android:color/white" android:pathData="M9,5.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"/>
