--- a/PetTracking/app/src/main/res/layout/fragment_home.xml
+++ b/PetTracking/app/src/main/res/layout/fragment_home.xml
@@ -14,16 +14,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
 
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_karne"
-        card_view:cardElevation="20dp"
+        card_view:cardElevation="2dp"
         android:layout_marginBottom="10dp"
         android:textAlignment="center"
+        android:clickable="true"
         android:backgroundTint="#E6F1DA"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -40,7 +41,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="0dp"
             android:layout_weight="1.3"
-            android:layout_height="80dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="2dp"
@@ -77,9 +78,10 @@
             <androidx.cardview.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_asılar"
-                card_view:cardElevation="20dp"
+                card_view:cardElevation="2dp"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
+                android:clickable="true"
                 android:backgroundTint="#F4DBD3"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -95,8 +97,8 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="0dp"
-                        android:layout_weight="1.3"
-                        android:layout_height="80dp"
+                        android:layout_weight="1.2"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="2dp"
@@ -133,7 +135,8 @@
             <androidx.cardview.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_myPets"
-                card_view:cardElevation="20dp"
+                card_view:cardElevation="2dp"
+                android:clickable="true"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
                 android:backgroundTint="#F0CFF6"
@@ -151,8 +154,8 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="0dp"
-                        android:layout_weight="1.3"
-                        android:layout_height="80dp"
+                        android:layout_weight="1.2"
+                        android:layout_height="60dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="2dp"
                         android:layout_gravity="center"
@@ -189,9 +192,10 @@
             <androidx.cardview.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_soru"
-                card_view:cardElevation="20dp"
+                card_view:cardElevation="2dp"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
+                android:clickable="true"
                 android:backgroundTint="#CAAF87"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -207,8 +211,8 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="0dp"
-                        android:layout_weight="1.3"
-                        android:layout_height="80dp"
+                        android:layout_weight="1.2"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="2dp"
@@ -245,10 +249,11 @@
             <androidx.cardview.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view_cevaplar"
-                card_view:cardElevation="20dp"
+                card_view:cardElevation="2dp"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
                 android:backgroundTint="#EDDBA6"
+                android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 card_view:cardCornerRadius="15dp">
@@ -263,8 +268,8 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:layout_width="0dp"
-                        android:layout_weight="1.3"
-                        android:layout_height="80dp"
+                        android:layout_weight="1.2"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="2dp"
@@ -300,13 +305,14 @@
 
             <androidx.cardview.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_view"
-                card_view:cardElevation="20dp"
+                android:id="@+id/card_view_kampanya"
+                card_view:cardElevation="2dp"
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
-                android:backgroundTint="#E6F1DA"
+                android:backgroundTint="#F8CFDD"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
+                android:clickable="true"
                 card_view:cardCornerRadius="15dp">
 
                 <LinearLayout
@@ -320,18 +326,76 @@
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/petProfile_image"
                         android:layout_width="0dp"
-                        android:layout_weight="1.4"
-                        android:layout_height="96dp"
+                        android:layout_weight="1.2"
+                        android:layout_gravity="center"
+                        android:layout_height="60dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="2dp"
-                        android:background="@drawable/ic_baseline_assignment_24"
+                        android:background="@drawable/ic_baseline_campaign_24"
                         app:civ_border_width="2dp"
                         app:civ_border_color="#FF000000"/>
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="96dp"
-                        android:text="Pet Virtual Scorecard"
+                        android:text="Campaigns"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/purple_700"
+                        android:gravity="center"
+                        android:layout_weight="3">
+
+                    </TextView>
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_margin="20dp"
+                        android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
+                        app:civ_border_width="0dp"
+                        app:civ_border_color="#FF000000"/>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view_iletisim"
+                card_view:cardElevation="2dp"
+                android:layout_marginBottom="10dp"
+                android:textAlignment="center"
+                android:clickable="true"
+                android:backgroundTint="#C2F3FA"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                card_view:cardCornerRadius="15dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_margin="2dp">
+
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="0dp"
+                        android:layout_weight="1.2"
+                        android:layout_gravity="center"
+                        android:layout_height="60dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="2dp"
+                        android:background="@drawable/ic_baseline_add_ic_call_24"
+                        app:civ_border_width="2dp"
+                        app:civ_border_color="#FF000000"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="96dp"
+                        android:text="Contact"
                         android:textSize="20dp"
                         android:textStyle="bold"
                         android:textColor="@color/purple_700"
