--- a/PetTracking/app/src/main/res/layout/fragment_home.xml
+++ b/PetTracking/app/src/main/res/layout/fragment_home.xml
@@ -196,7 +196,7 @@
                 android:layout_marginBottom="10dp"
                 android:textAlignment="center"
                 android:clickable="true"
-                android:backgroundTint="#CAAF87"
+                android:backgroundTint="#E1C8A2"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 card_view:cardCornerRadius="15dp">
