--- a/PetTracking/app/src/main/res/layout/activity_main.xml
+++ b/PetTracking/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
 
 
 
-    <com.google.android.material.navigation.NavigationView
+    <androidx.appcompat.widget.Toolbar
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_menu"
         app:cardElevation="20dp"
@@ -48,16 +48,52 @@
             android:orientation="horizontal"
             android:layout_alignParentBottom="true">
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1">
             <com.google.android.material.button.MaterialButtonToggleGroup
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/ic_baseline_home_24">
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="40dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_local_phone_24">
 
             </com.google.android.material.button.MaterialButtonToggleGroup>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+
+                android:layout_weight="1">
+                <com.google.android.material.button.MaterialButtonToggleGroup
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:id="@+id/home_menu_buton"
+                    android:layout_marginLeft="40dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_baseline_home_24">
+
+                </com.google.android.material.button.MaterialButtonToggleGroup>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1">
+                <com.google.android.material.button.MaterialButtonToggleGroup
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="40dp"
+                    android:background="@drawable/ic_baseline_power_settings_new_24">
+
+                </com.google.android.material.button.MaterialButtonToggleGroup>
+            </LinearLayout>
         </LinearLayout>
 
 
-    </com.google.android.material.navigation.NavigationView>
+    </androidx.appcompat.widget.Toolbar>
 
 
 
