--- a/PetTracking/app/src/main/res/layout/activity_main.xml
+++ b/PetTracking/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,9 @@
                 android:layout_height="50dp"
                 android:layout_weight="1">
             <com.google.android.material.button.MaterialButtonToggleGroup
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/aramaYapButon"
                 android:layout_marginLeft="40dp"
                 android:layout_gravity="center"
                 android:background="@drawable/ic_baseline_local_phone_24">
@@ -68,8 +69,8 @@
 
                 android:layout_weight="1">
                 <com.google.android.material.button.MaterialButtonToggleGroup
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:id="@+id/home_menu_buton"
                     android:layout_marginLeft="40dp"
                     android:layout_gravity="center"
@@ -83,8 +84,10 @@
                 android:layout_height="50dp"
                 android:layout_weight="1">
                 <com.google.android.material.button.MaterialButtonToggleGroup
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:id="@+id/cikisYapButon"
                     android:layout_marginLeft="40dp"
                     android:background="@drawable/ic_baseline_power_settings_new_24">
 
