--- a/PetTracking/app/src/main/res/layout/asi_takip_alert_layout.xml
+++ b/PetTracking/app/src/main/res/layout/asi_takip_alert_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@drawable/arkaplan"
+    android:background="#9A533E"
     android:layout_height="wrap_content"
     >
 
@@ -10,7 +10,7 @@
         card_view:cardElevation="5dp"
         android:textAlignment="center"
         android:clickable="true"
-        card_view:cardBackgroundColor="#F4DBD3"
+        card_view:cardBackgroundColor="#F3AC96"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="15dp">
@@ -19,7 +19,8 @@
         card_view:cardElevation="5dp"
         android:textAlignment="center"
         android:clickable="true"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="6dp"
         card_view:cardBackgroundColor="#F6E3DD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
