--- a/PetTracking/app/src/main/res/layout/kampanya_view_item_layout.xml
+++ b/PetTracking/app/src/main/res/layout/kampanya_view_item_layout.xml
@@ -4,13 +4,24 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
-
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         card_view:cardElevation="5dp"
         android:textAlignment="center"
         android:clickable="true"
         android:layout_margin="10dp"
+        card_view:cardBackgroundColor="#EA709A"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="15dp">
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        card_view:cardElevation="5dp"
+        android:textAlignment="center"
+        android:clickable="true"
+        android:layout_marginBottom="6dp"
+        android:layout_marginLeft="5dp"
         card_view:cardBackgroundColor="#F6B9CE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,5 +86,8 @@
 
 
     </androidx.cardview.widget.CardView>
+
+    </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
