--- a/PetTracking/app/src/main/res/layout/pet_list_item_layout.xml
+++ b/PetTracking/app/src/main/res/layout/pet_list_item_layout.xml
@@ -4,12 +4,25 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
 
+
     <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         card_view:cardElevation="5dp"
         android:textAlignment="center"
         android:clickable="true"
         android:layout_margin="5dp"
+        card_view:cardBackgroundColor="#F5BE66CD"
+        android:layout_width="match_parent"
+        android:layout_height="310dp"
+        card_view:cardCornerRadius="15dp">
+
+    <androidx.cardview.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        card_view:cardElevation="5dp"
+        android:textAlignment="center"
+        android:clickable="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="6dp"
         card_view:cardBackgroundColor="#F5F0CFF6"
         android:layout_width="match_parent"
         android:layout_height="310dp"
@@ -77,5 +90,7 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
