--- a/PetTracking/app/src/main/res/layout/sanal_karne_pet_layout.xml
+++ b/PetTracking/app/src/main/res/layout/sanal_karne_pet_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:orientation="vertical"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
@@ -9,7 +10,7 @@
         card_view:cardElevation="5dp"
         android:textAlignment="center"
         android:clickable="true"
-        card_view:cardBackgroundColor="#F4DBD3"
+        card_view:cardBackgroundColor="#B8ED7D"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="15dp">
@@ -19,8 +20,9 @@
             android:textAlignment="center"
             android:clickable="true"
             android:id="@+id/sanalKarneCardView"
-            android:layout_margin="10dp"
-            card_view:cardBackgroundColor="#F6E3DD"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="5dp"
+            card_view:cardBackgroundColor="#D5F4B4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="15dp">
@@ -42,7 +44,7 @@
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
                     android:textStyle="bold"
-                    android:textColor="#F3420A">
+                    android:textColor="#75BD27">
 
                 </TextView>
 
@@ -56,7 +58,7 @@
                     android:layout_marginLeft="3dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
-                    card_view:cardBackgroundColor="#F3CEC2"
+                    card_view:cardBackgroundColor="#D5F3B5"
                     android:layout_height="wrap_content"
                     card_view:cardCornerRadius="25dp"
                     android:layout_alignParentBottom="true"
@@ -85,7 +87,7 @@
                     android:textAlignment="center"
                     android:layout_marginTop="5dp"
                     android:textStyle="bold"
-                    android:textColor="#FD511A">
+                    android:textColor="#4B5045">
 
                 </TextView>
 
