--- a/PetTracking/app/src/main/res/xml/network_security_config.xml
+++ b/PetTracking/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <base-config cleartextTrafficPermitted="true" />
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">http://192.168.1.4</domain>
+        <domain includeSubdomains="true">...</domain>
     </domain-config>
 </network-security-config>
